# django-deploy-sample

./: .env.example  README.md  django_sample.conf  pyproject.toml
config/: settings.py
docs/: 01_ローカルの開発環境準備と、Djangoプロジェクトの初期作成.md  02_AWSの環境構築.md  03_EC2上でNginxとDjangoを動作させる.md  04_Supervisorを利用したプロセスの永続化 .md  appendix_おすすめのVSCode 拡張機能.md
nginx_config/: default  django-deploy-sample.conf
supervisor_config/: django-deploy-sample.conf
