[tool.poetry]
name = "django-sample"
version = "0.1.0"
description = ""
authors = ["LUMIERE\\y-uchiida <y-uchiida@nirneege.com>"]
readme = "README.md"
packages = [{include = "django_sample"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
